# ariste

./: .gitignore  Cargo.toml  test_plan.sh
docs/: PLAN_TESTING.md
examples/: README.md  plan_demo.rs  plan_usage.rs  quick_plan_test.rs
src/: agent.rs  command.rs  config.rs  error.rs  image.rs  lib.rs  main.rs  ollama.rs  tools.rs  ui.rs
src/agent/: agent.rs  message.rs  mod.rs
src/cli/: command.rs  mod.rs
src/config/: agent.rs  mod.rs
src/llm/: mod.rs  ollama.rs
src/tools/: bash.rs  calculator.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  task.rs  todo_write.rs  types.rs  web_fetch.rs  write.rs
src/ui/: mod.rs  terminal.rs
src/utils/: image.rs  mod.rs
