[package]
name = "ariste"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ariste"
path = "src/main.rs"

[lib]
name = "ariste"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
thiserror = "2.0"
serde_json = "1.0"
tungstenite = "0.28"
rustyline = "17.0"
rustyline-derive = "0.11"
url = "2.5"
colored = "3.0"
futures-util = "0.3"
bytes = "1.10"
base64 = "0.22"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
glob = "0.3"
regex = "1.11"

[lints.rust]
dead_code = "allow"